--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "simplereading"
-version = "0.9.0"
+version = "0.9.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -19,5 +19,5 @@ log = "0.4"
 readability = { git = "https://github.com/lucifer9/readability", default-features = false }
 encoding = "0.2"
 hyper-tls = "0.5"
-follow-redirects = { git = "https://github.com/lucifer9/rust-follow-redirects" }
 anyhow = "1.0"
+sysreq = "0"
