--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "simplereading"
-version = "0.9.1"
+version = "0.9.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 hyper = { version = "0.14", features = ["server", "client", "http1", "http2"] }
-tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
+tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "process"] }
 url = "2.2"
 flate2 = "1"
 brotli2 = "0.3"
@@ -20,4 +20,3 @@ readability = { git = "https://github.com/lucifer9/readability", default-feature
 encoding = "0.2"
 hyper-tls = "0.5"
 anyhow = "1.0"
-sysreq = "0"
