--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,7 @@ readability = { git = "https://github.com/lucifer9/readability", default-feature
 encoding = "0.2"
 hyper-tls = "0.5"
 anyhow = "1.0"
+chrono = "0.4"
+uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics"]}
+tokio-tungstenite = {version = "*", features = ["native-tls"]}
+futures-util = "0.3"
