--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ chrono = "0.4"
 uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics"]}
 tokio-tungstenite = {version = "*", features = ["native-tls"]}
 futures-util = "0.3"
+unicode-segmentation = "1"
