--- a/.build.yml
+++ b/.build.yml
@@ -2,8 +2,10 @@ image: debian/stable
 packages:
   - libssl-dev
   - pkg-config
+  - cmake
 sources:
   - https://git.sr.ht/~jamdu/simplereading
+  - https://github.com/upx/upx
 tasks:
   - setup: |
       curl https://sh.rustup.rs -sSf | sh -s -- -y
@@ -20,11 +22,14 @@ tasks:
       ]
       EOF
   - build: |
+      cd upx
+      make -j0
+      cd ..
       source .cargo/env
       cd simplereading
       cargo build --release
+      ../upx/build/release/upx --best --lzma target/release/simplereading
   - deploy: |
-      cd simplereading
       ssh -p37201 -o StrictHostKeyChecking=no lucifer@hk.icean.xyz systemctl --user stop book.service
       scp -P37201 -o StrictHostKeyChecking=no target/release/simplereading lucifer@hk.icean.xyz:work/simplereading
       ssh -p37201 -o StrictHostKeyChecking=no lucifer@hk.icean.xyz systemctl --user start book.service
