--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -58,11 +58,13 @@ jobs:
     name: build
     needs: [test, fmt, clippy]
     runs-on: ubuntu-latest
-    env:
-      CARGO_PROFILE_RELEASE_LTO: true
-      CARGO_PROFILE_RELEASE_STRIP: true
-      CARGO_PROFILE_RELEASE_CODEGEN_UNITS: 1
-      RUSTFLAGS: "-C target-cpu=broadwell"
+    container:
+      image: debian:stable
+      env:
+        CARGO_PROFILE_RELEASE_LTO: true
+        CARGO_PROFILE_RELEASE_STRIP: true
+        CARGO_PROFILE_RELEASE_CODEGEN_UNITS: 1
+        RUSTFLAGS: "-C target-cpu=broadwell"
     steps:
       - uses: actions/checkout@v3
       - uses: actions-rs/toolchain@v1
