--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ hyper = { version = "0.14", features = ["server", "client", "http1", "http2"] }
 tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "process"] }
 url = "2.2"
 flate2 = "1"
-brotli2 = "0.3"
 lazy_static = "1.4"
 unicase = "2.6"
 html5ever = "0.26"
@@ -20,8 +19,10 @@ readability = { git = "https://github.com/lucifer9/readability", default-feature
 encoding = "0.2"
 hyper-tls = "0.5"
 anyhow = "1.0"
-chrono = "0.4"
 uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics"]}
 tokio-tungstenite = {version = "*", features = ["native-tls"]}
 futures-util = "0.3"
 unicode-segmentation = "1.9"
+time = { version = "0.3", features = ["formatting"] }
+brotli = "3.3"
+
