--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,17 @@
 [package]
 name = "simplereading"
-version = "0.9.27"
+version = "0.9.28"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 hyper = { version = "0.14", features = ["server", "client", "http1", "http2"] }
-tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "process"] }
+tokio = { version = "1", features = [
+    "rt-multi-thread",
+    "net",
+    "macros",
+    "process",
+] }
 url = "2"
 flate2 = "1"
 lazy_static = "1.4"
@@ -19,8 +24,8 @@ readability = { git = "https://github.com/lucifer9/readability", default-feature
 encoding = "0.2"
 hyper-tls = "0.5"
 anyhow = "1.0"
-uuid = { version = "1", features = ["v4", "fast-rng"]}
-tokio-tungstenite = {version = "*", features = ["native-tls"]}
+uuid = { version = "1", features = ["v4", "fast-rng"] }
+tokio-tungstenite = { version = "*", features = ["native-tls"] }
 futures-util = "0.3"
 #unicode-segmentation = "1.9"
 time = { version = "0.3", features = ["formatting"] }
