--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -59,9 +59,8 @@ jobs:
     needs: [test, fmt, clippy]
     runs-on: ubuntu-latest
     env:
-      CARGO_PROFILE_RELEASE_LTO: true
+      CARGO_PROFILE_RELEASE_LTO: "thin"
       CARGO_PROFILE_RELEASE_STRIP: true
-      CARGO_PROFILE_RELEASE_CODEGEN_UNITS: 1
       RUSTFLAGS: "-C target-cpu=broadwell"
     steps:
       - id: prepare
