--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,10 @@ http-body-util = "0.1"
 hyper-util = { version = "0.1", features = ["full"] }
 hyper-tls = "0.6"
 tokio = { version = "1", features = [
-    "rt-multi-thread",
-    "net",
-    "macros",
-    "process",
+  "rt-multi-thread",
+  "net",
+  "macros",
+  "process",
 ] }
 url = "2"
 flate2 = "1"
@@ -22,8 +22,8 @@ unicase = "2.7"
 html5ever = "0.29"
 regex = "1"
 log = "0.4"
-#readability = { path = "../readability", default-features = false }
-readability = { git = "https://github.com/lucifer9/readability", default-features = false }
+readability = { path = "../readability", default-features = false }
+#readability = { git = "https://github.com/lucifer9/readability", default-features = false }
 encoding_rs = "0.8"
 anyhow = "1.0"
 uuid = { version = "1", features = ["v4", "fast-rng"] }
